--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,7 @@
 
     img {
       .ph-round(5px);
+      margin-top: 105px;
       @media @phone {
         max-width: 500px;
       }
